@@ -1,24 +1,25 @@
 package br.com.api.flow.person.item;
 
-import static br.com.api.exceptions.FindByFilterExceptionEnum.MORE_THAN_ONE_matriculation_FOUND;
-
 import java.lang.reflect.InvocationTargetException;
-import java.util.List;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Example;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
 
 import br.com.api.converter.PersonMapper;
 import br.com.api.entity.Person;
 import br.com.api.entity.repository.PersonFilter;
+import br.com.api.entity.repository.PersonRepository;
 import br.com.api.entity.repository.PersonRepositoryImpl;
-import br.com.api.exceptions.FindByFilterException;
+import lombok.var;
 
 @Component
 public class FindPersonByFilterFlowItem {
+
+	@Autowired
+	private PersonRepository personRepository;
 
 	@Autowired
 	private PersonRepositoryImpl personRepositoryImpl;
@@ -26,27 +27,35 @@ public class FindPersonByFilterFlowItem {
 	@Autowired
 	private PersonMapper personMapper;
 
-	public PersonFilter findByFilter(PersonFilter filter)
-			throws FindByFilterException, NoSuchMethodException, SecurityException, IllegalArgumentException,
-			IllegalAccessException, InvocationTargetException, InstantiationException {
+	public PersonFilter findByFilter(PersonFilter filter) {
+
+		Example<Person> example = Example.of(personMapper.toEntity(filter.getExample()));
+		if (Boolean.TRUE.equals(filter.getPageable())) {
+			final var ret = personRepository.findAll(example,
+					PageRequest.of(filter.getCurrentPage(), filter.getSizePage()));
+			filter.setResult(ret.stream().map(p -> personMapper.toDTO(p)).collect(Collectors.toList()));
+			filter.setTotal((int) ret.getTotalElements());
+			filter.setTotalPages(ret.getTotalPages());
+			return filter;
+		}
+		final var ret = personRepository.findAll(example);
+		filter.setResult(ret.stream().map(p -> personMapper.toDTO(p)).collect(Collectors.toList()));
+		return filter;
+	}
+
+	public PersonFilter findByFilterImpl(PersonFilter filter) throws NoSuchMethodException, SecurityException,
+			IllegalArgumentException, IllegalAccessException, InvocationTargetException, InstantiationException {
 
 		if (Boolean.TRUE.equals(filter.getPageable())) {
-			Page<Person> entities = personRepositoryImpl.findByFilter(filter,
+			final var ret = personRepositoryImpl.findByFilter(filter,
 					PageRequest.of(filter.getCurrentPage(), filter.getSizePage()));
-
-			filter.setResult(entities.map(entity -> personMapper.toDTO(entity)).toList());
-			filter.setTotal(Math.toIntExact(entities.getTotalElements()));
-			filter.setTotalPages(Math.toIntExact(entities.getTotalPages()));
-			filter.setLast(entities.isLast());
-		} else {
-			List<Person> entities = personRepositoryImpl.findByFilter(filter);
-			filter.setResult(entities.stream().map(entity -> personMapper.toDTO(entity)).collect(Collectors.toList()));
+			filter.setResult(ret.stream().map(p -> personMapper.toDTO(p)).collect(Collectors.toList()));
+			filter.setTotal((int) ret.getTotalElements());
+			filter.setTotalPages(ret.getTotalPages());
+			return filter;
 		}
-
-		if (Boolean.TRUE.equals(filter.getResultUnique()) && filter.getResult().size() > 1) {
-			throw new FindByFilterException(MORE_THAN_ONE_matriculation_FOUND);
-		}
-
+		final var ret = personRepositoryImpl.findByFilter(filter);
+		filter.setResult(ret.stream().map(p -> personMapper.toDTO(p)).collect(Collectors.toList()));
 		return filter;
 	}
 }
